11th version of internationalization
git-svn-id: https://plugins.svn.wordpress.org/daikos-youtube-widget/trunk@51540 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/daikos-youtube-widget.pot
+++ b/daikos-youtube-widget.pot
@@ -56,7 +56,7 @@ msgid "IMPORTANT: No line brake (new line) after the last video!"
 msgstr ""
 
 #: daikosyoutubewidget.php:82
-msgid "Videos [YouTubeID]@[TITLE]{Line brake}"
+msgid "Videos"
 msgstr ""
 
 #: daikosyoutubewidget.php:83
